--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-youtube": "^7.11.2"
   },
   "devDependencies": {
     "prettier": "2.0.5"
