--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "streamon-instagram-live-streamer",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Instagram Live Streamer",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Musthaq Ahamad <musthu.gm@gmail.com>",
   "dependencies": {
     "gatsby": "^2.21.9",
     "gatsby-image": "^2.4.0",
