--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "gatsby": "^2.21.9",
     "gatsby-image": "^2.4.0",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-gtag": "^3.2.0",
     "gatsby-plugin-google-tagmanager": "^2.3.11",
     "gatsby-plugin-manifest": "^2.4.1",
